fixed image size on mobile

--- a/src/Sass/Home/Home.scss
+++ b/src/Sass/Home/Home.scss
@@ -8,6 +8,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(4, 25%);
   padding: 0.5em;
+  padding-top: 1em;
   box-sizing: border-box;
   gap: 1rem;
   width: 100%;
